@@ -39,12 +39,21 @@ module AdsCommon
       end
     end
 
-    # Raised when OAuth access token is required.
+    # Raised when OAuth1.0a access token is required.
     class OAuthVerificationRequired < AuthError
       attr_reader :oauth_url, :request_token
       def initialize(oauth_url, request_token)
         super()
         @oauth_url, @request_token = oauth_url, request_token
+      end
+    end
+
+    # Raised when OAuth2.0 access token is required.
+    class OAuth2VerificationRequired < AuthError
+      attr_reader :oauth_url
+      def initialize(oauth_url)
+        super()
+        @oauth_url = oauth_url
       end
     end
 
